Fixed bug, that graphs was not showing up after reload

--- a/front-end-side/src/Pages/Data.css
+++ b/front-end-side/src/Pages/Data.css
@@ -22,27 +22,27 @@ table.data_table {
 
     table.data_table td {
         background: #373f4d;
-        /*white-space: nowrap;
+        white-space: nowrap;
         text-overflow: ellipsis;
-        overflow: hidden;*/
+        overflow: hidden;
     }
 
         table.data_table td:nth-of-type(1) {
             width: 110px;
         }
 
-        /*table.data_table td:nth-of-type(2) {
+        table.data_table td:nth-of-type(2) {
             max-width: 20vw;
-        }*/
+        }
 
         table.data_table td:nth-of-type(4) {
             width: 90px;
         }
 
 
-        /*table.data_table td:nth-of-type(4) {
-            width: 60px;
-        }*/
+        table.data_table td:nth-of-type(4) {
+           width: 60px;
+        }
 
         table.data_table td.edit, table.data_table td.move, table.data_table td.delete {
             cursor: pointer;
